# parquet-format-safe

./: Cargo.toml  README.md  generate_parquet_format.sh
.github/workflows/: coverage.yml  test.yml
src/: lib.rs  parquet_format.rs
src/thrift/: errors.rs  mod.rs  transport.rs
src/thrift/protocol/: compact.rs  compact_stream.rs  compact_stream_write.rs  compact_write.rs  mod.rs  stream.rs
src/thrift/varint/: mod.rs
