# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "parquet-format-async-temp"
version = "0.2.0"
license = "Apache-2.0"
description = "Temporary crate containing thrift library + parquet definitions compiled to support read+write async."
authors = [
    "Chao Sun <sunchao@apache.org>",
    "Ivan Sadikov <ivan.sadikov@gmail.com>",
    "Neville Dipale <nevilledips@gmail.com>",
    "Jorge Leitao <jorgecarleitao@gmail.com>",
]
edition = "2018"

readme = "README.md"
homepage = "https://github.com/jorgecarleitao/parquet-format-rs"
repository = "https://github.com/jorgecarleitao/parquet-format-rs"
keywords = ["parquet", "hadoop"]

[dependencies]
byteorder = "1.3"
integer-encoding = { version = "3.0", features = ["futures_async"] }
ordered-float = "2.0"
async-trait = {version = "0.1"}
futures = {version = "0.3"}
