[package]
name = "parquet-format-safe"
version = "0.2.2"
license = "MIT/Apache-2.0"
description = "Safe Parquet and Thrift reader and writer (sync and async)"
authors = [
    "Apache Thrift contributors <dev@thrift.apache.org>",
    "Jorge Leitao <jorgecarleitao@gmail.com>",
]
edition = "2021"

readme = "README.md"
homepage = "https://github.com/jorgecarleitao/parquet-format-safe"
repository = "https://github.com/jorgecarleitao/parquet-format-safe"
keywords = ["parquet", "thrift"]

[dependencies]
integer-encoding = { version = "3.0" }
async-trait = {version = "0.1", optional = true}
futures = {version = "0.3", optional = true}

[features]
default = []
full = ["async"]
async = ["futures", "async-trait", "integer-encoding/futures_async"]
